--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <br>
     <div class="container">
             <div class="row">
-                <legend align="center">Our Recent Blog Posts</legend>
+                <legend align="center">Our Recent Posts</legend>
                 <div class="row">
                 {% for post in home_posts %}
                 <div class="col-sm-4">
